# GComponentQtPuginLib

./: .gitignore  CmakeLists.txt  LICENSE.txt  README.md
ColorCanvas/: CMakeLists.txt  resource.qrc
ColorCanvas/inc/: color_canvas.h  color_canvas_plugin.h
ColorCanvas/src/: color_canvas.cpp  color_canvas_plugin.cpp
DragEdit/: CMakeLists.txt  resource.qrc
DragEdit/inc/: dragedit.h  drageditplugin.h
DragEdit/src/: dragedit.cpp  drageditplugin.cpp
MyPlugins/: CMakeLists.txt
MyPlugins/inc/: custom_widgets_plugins.h
MyPlugins/inc/AcrInstrument/: acrinstrument.h  acrinstrument_plugin.h
MyPlugins/inc/ClickedEdit/: clicked_edit.h  clicked_edit_plugin.h
MyPlugins/inc/CollapsibleHeader/: collapsible_header.h  collapsible_header_plugin.h
MyPlugins/inc/ColorCanvas/: color_canvas.h  color_canvas_plugin.h
MyPlugins/inc/ColorEdit/: color_edit.h  color_edit_plugin.h
MyPlugins/inc/DragEdit/: drag_edit.h  drageditplugin.h
MyPlugins/inc/Selector/: selector.h  selector_plugin.h
MyPlugins/inc/SwitchControl/: switch_control.h  switch_control_plugin.h
MyPlugins/inc/Vector3Edit/: vector3_edit.h  vector3_edit_plugin.h
MyPlugins/resources/: icon.qrc
MyPlugins/src/: custom_widgets_plugins.cpp
MyPlugins/src/AcrInstrument/: acrinstrument.cpp  acrinstrument_plugin.cpp
MyPlugins/src/ClickedEdit/: clicked_edit.cpp  clicked_edit_plugin.cpp
MyPlugins/src/CollapsibleHeader/: collapsible_header.cpp  collapsible_header_plugin.cpp
MyPlugins/src/ColorCanvas/: color_canvas.cpp  color_canvas_plugin.cpp
MyPlugins/src/ColorEdit/: color_edit.cpp  color_edit_plugin.cpp
MyPlugins/src/DragEdit/: dragedit.cpp  drageditplugin.cpp
MyPlugins/src/Selector/: selector.cpp  selector_plugin.cpp
MyPlugins/src/SwitchControl/: switch_control.cpp  switch_control_plugin.cpp
MyPlugins/src/Vector3Edit/: vector3_edit.cpp  vector3_edit_plugin.cpp
MyPlugins/ui/: collapsible_header.ui  color_display.ui  color_edit.ui  selector_dialog.ui  vector3_edit.ui
QtPlayground/: CMakeLists.txt  main.cpp  qtplayground.cpp  qtplayground.h  qtplayground.qrc  qtplayground.ui
